<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">2019 SkyStone</string>

    <string name="sendData">Send Data</string>
    <string name="submitInitials">Submit</string>

    <string name="mainAuthor">Revision Date 9/22/19</string>



    <!-- Send Data Strings-->

    <string name="concatenateMatch">Concatenate Match</string>
    <string name="concatenatePit">Concatenate Pit</string>
    <string name="concatFolder">Enter concatenation folder name</string>
    <string name="concatFolderEditTextValue">Scouting</string>
    <string name="concatenateDataText">concatenateData</string>
    <string name="sendRobotPhotosText">Send Robot Photos</string>
    <string name="sendPitData">Send Pit Data</string>
    <string name="sendMatchData">Send Match Data</string>
    
    <!-- Button Strings -->

    <string name="minus">-</string>
    <string name="plus">+</string>
    
    <!--Auton Strings-->

    <string name="teamNumberHeading">Team Number</string>
    <string name="matchNumberHeading">Match Number</string>



    <string name="startingLocationHeading">Starting Location</string>
    <!--Starting Location Choices -->
    <string-array name="startingLocation">
        <item>Choice 1</item>
        <item>Choice 2</item>
    </string-array>







    <string name="saveButton">Save</string>


    <!--Auton Error Strings-->

    <string name="teamNumberError">Enter in team number</string>
    <string name="matchNumberError">Enter in match number</string>
    <string name="startingLocationError">Enter starting location</string>

    <!--Teleop Strings-->

    <string name="cargoShipTitle">Cargo Ship</string>
    <string name="rocketShipTitle">Rocket Ship</string>
    <string name="hatchPanelsOnCargoShip">Hatch Panels on Cargo Ship</string>
    <string name="cargoInCargoShip">Cargo in Cargo Ship</string>
    <string name="hatchPanelTop">Hatch Panel Top</string>
    <string name="hatchPanelMiddle">Hatch Panel Middle</string>
    <string name="hatchPanelBottom">Hatch Panel Bottom</string>
    <string name="cargoTop">Cargo Top</string>
    <string name="cargoMiddle">Cargo Middle</string>
    <string name="cargoBottom">Cargo Bottom</string>
    <string name="defenseQuestion">How effective was the robot\'s defense?</string>
    <string name="endgameHeading">Where was the robot at end game?</string>
    <string name="generalInfoHeading">General Info</string>
    <string name="cycle_time_heading">What was the robot\'s average cycle time?</string>
    <string name="over_all_Effectiveness_heading">Rate the overall effectiveness of the robot during the match.</string>
    <string name="trained_drive_team_heading">How trained did the drive team look?</string>

    <string name="over_all_placement">Rate the overall placement of cargo and hatch panels</string>
    <string name="observ_average_speed">Average Speed</string>
    <string name="observ_dropped_hatches">Dropped a lot of hatches</string>
    <string name="observ_dropped_cargo">Dropped a lot of cargo</string>
    <string name="observ_hard_time_hatches">Had a hard time placing hatches</string>
    <string name="observ_hard_time_cargo">Had a hard time placing cargo</string>
    <string name="hatch_pickup">How did the robot pick up hatch panels?</string>
    <string name="cargo_pickup">How did the robot pick up cargo?</string>
    <string name="hatch_panel_pickup_na">N/A</string>
    <string name="hatch_panel_pickup_port">At the port</string>
    <string name="hatch_panel_pickup_floor">Off the floor</string>
    <string name="cargo_pickup_na">N/A</string>
    <string name="cargo_pickup_port">At the port</string>
    <string name="cargo_pickup_floor">Off the floor</string>
    <string name="robotObservations">Robot Observations</string>
    <string name="summaryHeading">In summary what did the robot do well?</string>
    <string name="issuesHeading">List any issues the robot had.</string>
    <string name="issues">Enter Issues here</string>
    <string name="summary">Enter Summary Here</string>

    <!-- Observation strings -->
    <string name="observ_fast">Fast</string>
    <string name="observ_slow">Slow</string>
    <string name="observ_jerky">Jerky</string>
    <string name="observ_smooth">Smooth</string>
    <string name="observ_fell_over">Fell Over</string>
    <string name="observ_died_mid">Died during match</string>
    <string name="observ_died_back">Died but came back</string>
    <string name="observ_penalties">Got lots of penalties</string>
    <string name="observ_fell_apart">Robot fell apart</string>
    <string name="observ_played_defense">Played defense most of the match</string>
    <string name="observ_not_much">Didn\'t do much</string>
    <string name="observ_hatch_pickup">Had hard time picking up hatch panels</string>
    <string name="observ_cargo_pickup">Had hard time picking up cargo</string>
    <string name="observ_slowed_by_robot">Had defense played against them</string>
    <string name="observ_dns">Didn\'t show up</string>


    

   

    <string name="climbingHeading">Climb</string>
    <string name="successClimb">Success</string>
    <string name="failClimb">Fail</string>
    <string name="noClimb">N/A</string>

    <string name="climbTimeHeading">Climb Time</string>

    <string name="abilityToHelpClimbHeading">Can help others climb</string>
    <string name="ableToHelpClimb">Yes</string>
    <string name="unableToHelpClimb">No</string>

    <string name="onPlatformHeading">On platform</string>
    <string name="isOnPlatform">Success</string>
    <string name="isNotOnPlatform">Fail</string>
    <string name="notAttemptedPlatform">N/A</string>

    <string name="defenseHeading">Defense</string>
    <string name="effectiveDefense">Effective</string>
    <string name="ineffectiveDefense">Ineffective</string>
    <string name="receivedFoulsDefense">Fouled</string>
    <string name="noDefense">N/A</string>

    <string name="fouls">Fouls</string>
    <string name="nextButton">Move To Teleop</string>

    <string name="scouterInitials">Scouter Initials</string>

    <!-- Rating Scale -->
    <string name="rating_0">0</string>
    <string name="rating_1">1</string>
    <string name="rating_2">2</string>
    <string name="rating_3">3</string>
    <string name="rating_4">4</string>
    <string name="rating_5">5</string>
    <string name="rating_6">6</string>
    <string name="rating_7">7</string>
    <string name="rating_8">8</string>
    <string name="rating_9">9</string>
    <string name="rating_10">10</string>
    <string name="rating_na">N/A</string>



    <!--Menu Strings-->
    <string name="matchScouting">Match</string>
    <string name="pitScouting">Pit</string>

    <!--Pit Scouting Strings-->
    <string name="pitTeamNumberHeading">Team Number</string>
    <string name="pitRobotWeightHint">Robot Weight</string>
    <string name="pitDriveTrain">Drive Train</string>
    <string name="pitProgrammingLanguage">Programming Language</string>
    <string name="pitStartingHabPositionText">On what habitat platform do you prefer to start from?</string>
    <string name="pitPreLoadText">What game piece do you preload?</string>
    <string name="robotPreLoadText">What game piece was preloaded?</string>
    <string name="pitHatch">Hatch panel</string>
    <string name="pitCargo">Cargo</string>
    <string name="pitNothing">Nothing</string>
    <string name="pitfirst15">What does your robot do in the first 15 seconds?</string>
    <string name="pit15auton">Autonomous</string>
    <string name="pit15manual">Manual drive with camera</string>
    <string name="pit15nothing">Nothing</string>
    <string name="pitHatchPanels">Where does your robot place hatch panels?</string>
    <string name="pitCargoShip">Cargo Ship</string>
    <string name="pitRocketBottom">Rocket-Bottom</string>
    <string name="pitRocketMiddle">Rocket-middle</string>
    <string name="pitRocketTop">Rocket-top</string>
    <string name="pitNA">N/A</string>
    <string name="pitCargoPlacement">Where does your robot place cargo?</string>
    <string name="pitEndgame">What does your robot do at endgame?</string>
    <string name="pitCargoShipText">What do you place on the cargo ship before the match?</string>
    <string name="pitPreMatchCargo">Cargo</string>
    <string name="pitPreMatchHatch">Hatch Panel</string>
    <string name="pitPreMatchNothing">Nothing</string>
    <string name="pitOtherLabel">Other</string>
    <string name="defenseInPerimeter">Is your robot able to  retract all components within its perimeter in order to play defense?</string>
    <string name="defenseInPerimeterYes">Yes</string>
    <string name="defenseInPerimeterNo">No</string>


    <!-- Programming drop down array -->
    <string-array name="programmingLanguages">
        <item>LabView</item>
        <item>C++</item>
        <item>Java</item>
        <item>Python</item>
        <item>Other</item>
    </string-array>

    <!-- Drive Train drop down array -->
    <string-array name="driveTrain">
        <item>Tank</item>
        <item>Mechanum</item>
        <item>Swerve</item>
        <item>Arcade</item>
        <item>Other</item>
    </string-array>

    <!-- Hab Platform drop down array -->
    <string-array name="habPlatform">
        <item>Lowest deck</item>
        <item>Middle deck</item>
        <item>Highest deck</item>
    </string-array>

    <string-array name="endgame">
        <item>Cargo</item>
        <item>Hatch Panel</item>
        <item>Nothing</item>
    </string-array>

    <string-array name="endgame_location">
        <item> </item>
        <item>Lowest deck</item>
        <item>Middle deck</item>
        <item>Highest deck</item>
        <item>Highest deck: carrying 1 robot</item>
        <item>Highest deck: carrying 2 robots</item>
        <item>Highest deck: carried by partner</item>
        <item>Middle deck: carrying 1 robot</item>
        <item>Middle deck: carried by partner</item>
        <item>Still on field</item>
    </string-array>

    <!-- cycle time Array -->

    <string-array name="cycle_time_spinner">

        <item> </item>
        <item>Less than 5 seconds</item>
        <item>5 to 10 Seconds</item>
        <item>10 to 15 Seconds</item>
        <item>20 + Seconds</item>
        <item>N/A</item>

    </string-array>

    <string name="pitJava">Java</string>
    <string name="pitCpp">C++</string>
    <string name="pitLabview">LabVIEW</string>
    <string name="pitOther">Other</string>
    <string name="pitRobotWeightTextView">How much does your robot weigh?</string>
    <string name="pitRobotArcadeGame">What old arcade game would your robot be in?</string>
    <string name="savePitButton">Save</string>

    <string name="takePhotoButton">Take Photo</string>

    <!-- Pit Error Strings -->
    <string name="pitTeamNumberError">Select a team number</string>
    <string name="pitProgrammingLanguageError">Enter Programming Language</string>
    <string name="robotNameError">Enter Robot Name</string>
    <string name="pitRobotWeightError">Enter Robot Weight</string>

    <!--  Teleop Error Strings -->
    <string name="teleopCargoShipHatchPanelError">Enter Cargo Ship Hatch Panels</string>
    <string name="teleopCargoInCargoShipError">Enter Cargo Ship Cargo</string>
    <string name="hatchPanelTopError">Enter Top HatchPanels</string>
    <string name="hatchPanelMiddleError">Enter Middle Hatch Panels</string>
    <string name="hatchPanelBottomError">Enter Bottom Hatch Panels</string>
    <string name="cargoTopError">Enter Top Cargo</string>
    <string name="cargoMiddleError">Enter Middle Cargo</string>
    <string name="cargoBottomError">Enter Bottom Cargo</string>
    <string name="scouterInitialsError">Enter Scouter Initials</string>
    <string name="hatch_panel_pickup_both">Both</string>
    <string name="cargo_pickup_both">Both</string>




</resources>