<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">


                <TextView
                      android:id="@+id/pit_teamNumber_input_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:ems="10"
                      android:textSize="10pt"
                      android:text="@string/pitTeamNumberHeading"/>
                <Spinner
                      android:id="@+id/pit_team_number_spinner"
                      android:layout_width="match_parent"
                      android:layout_height="30pt"
                    android:layout_weight="1">
                </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:text="@string/pitRobotWeightTextView"/>

            <EditText
                android:id="@+id/pit_robot_weight"
                android:hint="@string/pitRobotWeightHint"
                android:autofillHints="Weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>



                <TextView
                    android:id="@+id/pit_driveTrain_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="10pt"
                    android:text="@string/pitDriveTrain"/>
                <Spinner
                    android:id="@+id/pit_drive_train_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30pt">

                </Spinner>

                <TextView
                    android:id="@+id/pit_programmingLanguage_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="10pt"
                    android:text="@string/pitProgrammingLanguage"/>
                <Spinner
                    android:id="@+id/pit_programming_language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30pt">

                </Spinner>
//  ******************  ^^ Default Questions above. **************

            // ***************** Game Specific Questions *************



// ************* Default questions and buttons **************
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/pitOtherLabel"/>
            <EditText
                android:id="@+id/pit_other_input"
                android:autofillHints="Other"
                android:hint="@string/pitOtherLabel"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/scouterInitials"/>
            <EditText
                android:id="@+id/scouterInitials_input"
                android:autofillHints="Initials"
                android:hint="@string/scouterInitials"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/take_photo_btn"
                android:layout_width="match_parent"
                android:layout_height="80pt"
                android:onClick="takePhoto"
                android:textSize="12pt"
                android:text="@string/takePhotoButton" />

            <Button
                android:id="@+id/save_pit_btn"
                android:layout_width="match_parent"
                android:layout_height="30pt"
                android:onClick="savePitData"
                android:textSize="12pt"
                android:text="@string/savePitButton" />






        </LinearLayout>
    </ScrollView>
</LinearLayout>